--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 API_KEY=4qtutsebhny3zgp3jadur9n6
+TWITTER_API_KEY=ay8I7VfjXaUAJ177ze2rWt108
+TWITTER_API_KEY_SECRET=Un6rU56pxZgBRPEHyYj92GWHZOvjUFcBEkcPUthuh91gZ3Cgz2
+TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAHIPogEAAAAAAn7uNBKG4B3nWG2%2FEXZywnfCvnQ%3DUkdZbiEh2RdLQrxX83amrOAlF8UMeuXPzQw3OUkuNqE2gJzgpV
+TWITTER_ACCESS_TOKEN=2831438783-Mm5iJPFfHPivoLsjKtlE7TAP9Psbb7vbz2pDiAi
+TWITTER_ACCESS_TOKEN_SECRET=zhqm8VIN7R0zwkx8QC7FqqdhsILBccyXC4m5He1YJUqqv
